Update Expo SDK to v51 and enable new architecture (#249)
* chore: bump expo sdk to v51

* chore: bump expo dependencies

* chore: enable new architecture

--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -29,6 +29,18 @@
     },
     "plugins": [
       [
+        "expo-build-properties",
+        {
+          "android": {
+            "newArchEnabled": true
+          },
+          "ios": {
+            "newArchEnabled": true
+          }
+        }
+      ],
+      "expo-secure-store",
+      [
         "expo-location",
         {
           "locationAlwaysAndWhenInUsePermission": "Allow animavita to use your location."
