--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -14,18 +14,20 @@
   "dependencies": {
     "@animavita/types": "workspace:*",
     "@animavita/validation-schemas": "workspace:*",
-    "@expo/webpack-config": "^19.0.0",
+    "@expo/webpack-config": "^19.0.1",
     "@hookform/resolvers": "^2.9.10",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "@tanstack/react-query": "^4.14.5",
     "axios": "1.2.0-alpha.1",
-    "expo": "^49.0.13",
-    "expo-image-picker": "~14.3.2",
-    "expo-location": "~16.1.0",
-    "expo-secure-store": "~12.3.1",
-    "expo-status-bar": "~1.6.0",
-    "expo-updates": "~0.18.19",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "expo": "^51.0.39",
+    "expo-build-properties": "~0.12.5",
+    "expo-image-picker": "~15.0.7",
+    "expo-location": "~17.0.1",
+    "expo-secure-store": "~13.0.2",
+    "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.27",
     "i18next": "^23.2.10",
     "msw": "^2.7.0",
     "native-base": "^3.4.25",
@@ -34,23 +36,23 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.42.1",
     "react-i18next": "^12.0.0",
-    "react-native": "0.72.10",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-pager-view": "6.2.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.2",
+    "react-native-pager-view": "6.3.0",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "~3.31.1",
     "react-native-size-matters": "^0.4.0",
-    "react-native-svg": "13.9.0",
+    "react-native-svg": "15.2.0",
     "react-native-tab-view": "^3.5.1",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.19.6",
+    "react-native-web": "~0.19.13",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.26.7",
     "@testing-library/react-native": "^13.0.1",
     "@types/jest": "28.1.8",
-    "@types/react": "~18.2.14",
+    "@types/react": "~18.2.79",
     "@types/react-native-vector-icons": "^6.4.13",
     "@types/styled-components": "^5.1.26",
     "@types/styled-components-react-native": "^5.2.0",
@@ -62,10 +64,10 @@
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^29.2.1",
-    "jest-expo": "^49.0.0",
+    "jest-expo": "^51.0.4",
     "prettier": "^2.3.2",
     "react-test-renderer": "^18.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.3.3"
   },
   "private": true,
   "jest": {
