--- a/.github/actions/setup-monorepo-for-backend/action.yml
+++ b/.github/actions/setup-monorepo-for-backend/action.yml
@@ -8,7 +8,7 @@ inputs:
 
   pnpm-version:
     description: Version of pnpm to use
-    default: 9.15.9
+    default: 7.x
 
   eas-version:
     description: Version of EAS CLI to use
@@ -35,6 +35,10 @@ runs:
       with:
         node-version: ${{ inputs.node-version }}
         cache: pnpm
+
+    - name: 📦 Replace .npmrc
+      run: rm .npmrc && mv .npmrc-default-node-linker .npmrc
+      shell: bash
 
     - name: 📦 Install dependencies
       run: pnpm install
