--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -1,18 +1,19 @@
-FROM node:20-slim AS base
-RUN apt-get update && apt-get install -y \
-  python3 \
-  python3-pip \
-  build-essential \
-  && rm -rf /var/lib/apt/lists/*
-RUN npm i -g pnpm@9.15.9
+FROM node:20.13.1 AS base
+RUN npm i -g pnpm@9.1.1
 
 FROM base AS dependencies
 WORKDIR /app
-COPY package.json pnpm-lock.yaml ./
-RUN pnpm install --frozen-lockfile
 COPY . .
+# workaround 
+# https://github.com/animavita/animavita/pull/134
+RUN rm .npmrc
+RUN mv .npmrc-default-node-linker .npmrc
+RUN pnpm install
 
-FROM dependencies as pruned
+FROM dependencies as build
+RUN pnpm -r build
+
+FROM build as pruned
 WORKDIR /app
 RUN pnpm --filter backend deploy pruned
 
